samples/_failures_safe/1761505184_b6ca54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98681484.c: In function ‘main’:
./samples/SAFE/__tmp_98681484.c:155:21: error: expected expression at end of input
  155 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_98681484.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98681484.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98681484.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98681484.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98681484.c:155:21: error: expected declaration or statement at end of input
